--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   badges: ^3.1.2
   intl: ^0.19.0
+  mongo_dart: ^0.10.3
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
